service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otel-collector-service
  namespace: apps
spec:
  selector: 
    app: otel-collector
  type: ClusterIP
  ports:
    - name: pprof
      port: 1888
      targetPort: 1888
    - name: prometheusmetrics
      port: 8888
      targetPort: 8888
    - name: prometheusexporter
      port: 8889
      targetPort: 8889
    - name: healthcheck
      port: 13133
      targetPort: 13133
    - name: grpcreceiver
      port: 4317
      targetPort: 4317
    - name: zpages
      port: 55679
      targetPort: 55679
---
apiVersion: v1
kind: Service
metadata:
  name: jeager-service
  namespace: apps
spec:
  selector: 
    app: jeager
  type: ClusterIP
  ports:
    - name: ui
      port: 16686
      targetPort: 16686
    - name: collector
      port: 14250
      targetPort: 14250
---
apiVersion: v1
kind: Service
metadata:
  name: zipkin-service
  namespace: apps
spec:
  selector: 
    app: zipkin
  type: ClusterIP
  ports:
    - port: 9411
      targetPort: 9411
---
