ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otel-ingress
  namespace: apps
spec:
  ingressClassName: nginx
  rules:
  - host: "jeager.mydomain.com"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
            service:
              name: jeager-service
              port:
                number: 16686
